@@ -10,7 +10,7 @@
  *
  * @ingroup Media
  */
-class JpegOrTiffHandler extends BitmapHandler {
+class ExifBitmapHandler extends BitmapHandler {
 
 	const BROKEN_FILE = '-1'; // error extracting metadata
 	const OLD_BROKEN_FILE = '0'; // outdated error extracting metadata.
